fix: stateful session bug